# novelties-bookshare

./: .gitignore  Dockerfile  README.md  all_xp.sh  channels.scm  decrypt_text.py  encrypt_text.py  manifest.scm  plot_hash_collisions.py  plot_xp_edition.py  plot_xp_edition_hash_len.py  plot_xp_edition_mlm_params.py  plot_xp_edition_split_params.py  plot_xp_synthetic_errors.py  plot_xp_synthetic_noise_overall.py  plot_xp_synthetic_noise_results.py  pyproject.toml  scratch.org  scratch.py  xp_edition.py  xp_edition_mlm_params.py  xp_edition_ner_novelties.py  xp_edition_propagate_order.py  xp_edition_split_params.py  xp_synthetic_errors.py  xp_synthetic_errors_ocr.py  xp_synthetic_noise.py
data/Frankenstein/F-1818/: chapter_1.conll  chapter_10.conll  chapter_11.conll  chapter_12.conll  chapter_13.conll  chapter_14.conll  chapter_15.conll  chapter_16.conll  chapter_17.conll  chapter_18.conll  chapter_19.conll  chapter_2.conll  chapter_20.conll  chapter_21.conll  chapter_22.conll  chapter_23.conll  chapter_24.conll  chapter_25.conll  chapter_26.conll  chapter_27.conll  chapter_3.conll  chapter_4.conll  chapter_5.conll  chapter_6.conll  chapter_7.conll  chapter_8.conll  chapter_9.conll
data/Frankenstein/F-1823/: chapter_1.conll  chapter_10.conll  chapter_11.conll  chapter_12.conll  chapter_13.conll  chapter_14.conll  chapter_15.conll  chapter_16.conll  chapter_17.conll  chapter_18.conll  chapter_19.conll  chapter_2.conll  chapter_20.conll  chapter_21.conll  chapter_22.conll  chapter_23.conll  chapter_24.conll  chapter_25.conll  chapter_26.conll  chapter_27.conll  chapter_3.conll  chapter_4.conll  chapter_5.conll  chapter_6.conll  chapter_7.conll  chapter_8.conll  chapter_9.conll
data/Frankenstein/F-1831/: chapter_1.conll  chapter_10.conll  chapter_11.conll  chapter_12.conll  chapter_13.conll  chapter_14.conll  chapter_15.conll  chapter_16.conll  chapter_17.conll  chapter_18.conll  chapter_19.conll  chapter_2.conll  chapter_20.conll  chapter_21.conll  chapter_22.conll  chapter_23.conll  chapter_24.conll  chapter_25.conll  chapter_26.conll  chapter_27.conll  chapter_28.conll  chapter_3.conll  chapter_4.conll  chapter_5.conll  chapter_6.conll  chapter_7.conll  chapter_8.conll  chapter_9.conll
data/Frankenstein/PG41445/: chapter_1.conll  chapter_10.conll  chapter_11.conll  chapter_12.conll  chapter_13.conll  chapter_14.conll  chapter_15.conll  chapter_16.conll  chapter_17.conll  chapter_18.conll  chapter_19.conll  chapter_2.conll  chapter_20.conll  chapter_21.conll  chapter_22.conll  chapter_23.conll  chapter_24.conll  chapter_25.conll  chapter_26.conll  chapter_27.conll  chapter_3.conll  chapter_4.conll  chapter_5.conll  chapter_6.conll  chapter_7.conll  chapter_8.conll  chapter_9.conll  notes.txt
data/Frankenstein/PG42324/: chapter_1.conll  chapter_10.conll  chapter_11.conll  chapter_12.conll  chapter_13.conll  chapter_14.conll  chapter_15.conll  chapter_16.conll  chapter_17.conll  chapter_18.conll  chapter_19.conll  chapter_2.conll  chapter_20.conll  chapter_21.conll  chapter_22.conll  chapter_23.conll  chapter_24.conll  chapter_25.conll  chapter_26.conll  chapter_27.conll  chapter_28.conll  (+7 more)
novelties_bookshare/: conll.py  decrypt.py  encrypt.py  utils.py
novelties_bookshare/experiments/: data.py  errors.py  metrics.py  noise.py  ocr_utils.py  plot_utils.py
tests/: strategies.py  test_decrypt.py  test_encrypt_decrypt.py  test_errors.py  test_utils.py
(+1209 files in other folders)
