[project]
name = "novelties-bookshare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "nltk>=3.9.1",
    "scrambledtext",
    "setuptools>=80.0.1",
]

[project.optional-dependencies]
transformers = [
    "transformers>=4.51.3",
]

[dependency-groups]
dev = [
    "hypothesis>=6.131.16",
    "pytest>=8.3.5",
]

[tool.uv.sources]
scrambledtext = { git = "https://github.com/Aethor/scrambledtext" }
