[project]
name = "novelties-bookshare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "transformers>=4.51.3",
    "torch>=2.7.0",
    "more-itertools>=10.7.0",
    "nltk>=3.9.1",
    "scienceplots>=2.1.1",
    "scrambledtext",
    "setuptools>=80.0.1",
]

[project.optional-dependencies]
transformers-cuda = [
    "transformers>=4.51.3",
    "torch>=2.7.0"
]
transformers-rocm = [
    "transformers>=4.51.3",
    "torch>=2.7.0",
    "pytorch-triton-rocm>=3.1.0",
]
experiments = [
    "matplotlib>=3.9.4",
    "sacred>=0.8.7",
    "joblib>=1.4.2",
    "pandas>=2.3.0"
]

[tool.uv]
conflicts = [
  [
    { extra = "transformers-cuda" },
    { extra = "transformers-rocm" },
  ],
]

[dependency-groups]
dev = [
    "hypothesis>=6.131.16",
    "pytest>=8.3.5",
]

[tool.uv.sources]
scrambledtext = { git = "https://github.com/Aethor/scrambledtext" }
torch = [
  { index = "pytorch-cu128", extra = "transformers-cuda" },
  { index = "pytorch-rocm63", extra = "transformers-rocm" },
]
pytorch-triton-rocm = [
  { index = "pytorch-rocm63", extra = "transformers-rocm" }
]



[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm63"
url = "https://download.pytorch.org/whl/rocm6.3"
explicit = true
