[project]
name = "novelties-bookshare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "transformers>=4.51.3",
    "torch>=2.7.0",
    "more-itertools>=10.7.0",
    "nltk>=3.9.1",
    "scrambledtext",
    "setuptools>=80.0.1",
]

[project.optional-dependencies]
cu128 = [
    "torch>=2.7.0"
]
rocm63 = [
    "torch>=2.7.0",
    "pytorch-triton-rocm>=3.1.0",
]
cpu = [
    "torch>=2.7.0"
]
experiments = [
    "matplotlib>=3.9.4",
    "scienceplots>=2.1.1",
    "sacred>=0.8.7",
    "joblib>=1.4.2",
    "pandas>=2.3.0"
]

[tool.uv]
conflicts = [
  [
    { extra = "cu128" },
    { extra = "rocm63" },
    { extra = "cpu" },
  ],
]

[dependency-groups]
dev = [
    "hypothesis>=6.131.16",
    "pytest>=8.3.5",
]

[tool.uv.sources]
scrambledtext = { git = "https://github.com/Aethor/scrambledtext" }
torch = [
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-rocm63", extra = "rocm63" },
  { index = "pytorch-cpu", extra = "cpu" },
]
pytorch-triton-rocm = [
  { index = "pytorch-rocm63", extra = "rocm63" }
]


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm63"
url = "https://download.pytorch.org/whl/rocm6.3"
explicit = true
